--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "scripts": {
     "build": "tree-sitter generate && node-gyp build",
     "test": "tree-sitter test && script/parse-examples",
+    "lint": "eslint grammar.js",
     "parse": "tree-sitter parse",
     "test-windows": "tree-sitter test"
   },
