--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -3,10 +3,10 @@ name: Fuzz Parser
 on:
   push:
     paths:
-      - src/scanner.cc
+      - src/scanner.c
   pull_request:
     paths:
-      - src/scanner.cc
+      - src/scanner.c
   workflow_dispatch:
 
 jobs:
@@ -18,5 +18,5 @@ jobs:
       - uses: vigoux/tree-sitter-fuzz-action@v1
         with:
           language: starlark
-          external-scanner: src/scanner.cc
+          external-scanner: src/scanner.c
           time: 60
