--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   "homepage": "https://github.com/amaanq/tree-sitter-starlark#readme",
   "dependencies": {
     "nan": "^2.17.0",
-    "tree-sitter-python": "github:tree-sitter/tree-sitter-python"
+    "tree-sitter-python": "^0.20.3"
   },
   "devDependencies": {
-    "eslint": "^8.34.0",
+    "eslint": "^8.47.0",
     "eslint-config-google": "^0.14.0",
-    "tree-sitter-cli": "^0.20.7"
+    "tree-sitter-cli": "^0.20.8"
   },
   "repository": "https://github.com/amaanq/tree-sitter-starlark",
   "scripts": {
