--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/amaanq/tree-sitter-starlark#readme",
   "dependencies": {
     "nan": "^2.17.0",
-    "tree-sitter-python": "^0.20.3"
+    "tree-sitter-python": "github:tree-sitter/tree-sitter-python"
   },
   "devDependencies": {
     "eslint": "^8.47.0",
