--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,9 @@ description = "Starlark grammar for tree-sitter"
 version = "1.1.0"
 authors = ["Amaan Qureshi <amaanq12@gmail.com>"]
 license = "MIT"
-readme = "bindings/rust/README.md"
-keywords = ["incremental", "parsing", "starlark", "bazel", "bzl"]
+keywords = ["incremental", "parsing", "tree-sitter", "starlark", "bazel"]
 categories = ["parsing", "text-editors"]
-repository = "https://github.com/amaanq/tree-sitter-starlark"
+repository = "https://github.com/tree-sitter-grammars/tree-sitter-starlark"
 edition = "2021"
 autoexamples = false
 
@@ -18,7 +17,7 @@ include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]
 path = "bindings/rust/lib.rs"
 
 [dependencies]
-tree-sitter = "0.20.9"
+tree-sitter = ">=0.21.0"
 
 [build-dependencies]
-cc = "1.0"
+cc = "1.0.98"
