--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,33 +2,69 @@ name: CI
 
 on:
   push:
-    branches:
-      - master
+    branches: ["*"]
+    paths:
+      - grammar.js
+      - src/**
+      - test/**
+      - bindings/**
+      - binding.gyp
   pull_request:
-    branches:
-      - "**"
+    paths:
+      - grammar.js
+      - src/**
+      - test/**
+      - bindings/**
+      - binding.gyp
+
+concurrency:
+  group: ${{github.workflow}}-${{github.ref}}
+  cancel-in-progress: true
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
+    name: Test parser
+    runs-on: ${{matrix.os}}
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
-        os: [macos-latest, ubuntu-latest]
+        os: [ubuntu-latest, windows-latest, macos-14]
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v2
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Set up tree-sitter
+        uses: tree-sitter/setup-action/cli@v1
+      - name: Set up examples
+        run: |-
+          git clone https://github.com/bazelbuild/starlark examples/starlark --single-branch --depth=1 --filter=blob:none
+          git clone https://github.com/mcuadros/ascode examples/ascode --single-branch --depth=1 --filter=blob:none
+          git clone https://github.com/cruise-automation/isopod examples/isopod --single-branch --depth=1 --filter=blob:none
+      - name: Run tests
+        uses: tree-sitter/parser-test-action@v2
         with:
-          node-version: 16
-      - run: npm install
-      - run: npm test
-
-  test_windows:
-    runs-on: windows-2019
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v2
+          test-rust: ${{runner.os == 'Linux'}}
+      - name: Parse examples
+        id: test
+        uses: tree-sitter/parse-action@v4
         with:
-          node-version: 16
-      - run: npm install
-      - run: npm run-script test-windows
+          files: |
+            examples/**/*.bzl
+            examples/**/*.star
+            examples/**/*.ipd
+            !examples/starlark/test_suite/testdata/go/assign.star
+            !examples/starlark/test_suite/testdata/go/builtins.star
+            !examples/starlark/test_suite/testdata/go/dict.star
+            !examples/starlark/test_suite/testdata/go/function.star
+            !examples/starlark/test_suite/testdata/go/int.star
+            !examples/starlark/test_suite/testdata/go/list.star
+            !examples/starlark/test_suite/testdata/go/misc.star
+            !examples/starlark/test_suite/testdata/go/string.star
+            !examples/starlark/test_suite/testdata/go/tuple.star
+            !examples/starlark/test_suite/testdata/java/dict.star
+            !examples/starlark/test_suite/testdata/java/list_mutation.star
+            !examples/starlark/test_suite/testdata/java/min_max.star
+            !examples/starlark/test_suite/testdata/java/reversed.star
+            !examples/starlark/test_suite/testdata/java/string_slice_index.star
+            !examples/starlark/test_suite/testdata/rust/int.star
+            !examples/starlark/test_suite/testdata/rust/josharian_fuzzing.star
+            !examples/starlark/test_suite/testdata/rust/mutation_during_iteration.star
