--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,20 +4,30 @@ description = "Starlark grammar for tree-sitter"
 version = "1.2.0"
 authors = ["Amaan Qureshi <amaanq12@gmail.com>"]
 license = "MIT"
-keywords = ["incremental", "parsing", "tree-sitter", "starlark", "bazel"]
+readme = "README.md"
+keywords = ["incremental", "parsing", "tree-sitter", "starlark"]
 categories = ["parsing", "text-editors"]
 repository = "https://github.com/tree-sitter-grammars/tree-sitter-starlark"
 edition = "2021"
 autoexamples = false
 
 build = "bindings/rust/build.rs"
-include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]
+include = [
+  "bindings/rust/*",
+  "./grammar.js",
+  "queries/*",
+  "src/*",
+  "./tree-sitter.json",
+]
 
 [lib]
 path = "bindings/rust/lib.rs"
 
 [dependencies]
-tree-sitter = ">=0.21.0"
+tree-sitter-language = "0.1"
 
 [build-dependencies]
-cc = "1.0.98"
+cc = "1.2"
+
+[dev-dependencies]
+tree-sitter = "0.24"
